# neutrino-halo-problem

./: .gitignore  CITATION.cff  LICENSE  README.md
halo-parallel/: CMakeLists.txt  debug.cpp  neutrino-headon-avg.cpp  neutrino-headon-evo.cpp  neutrino-headon-incline.cpp  neutrino-headon-nunubar.cpp  neutrino-headon.cpp  test.cpp  two-beams.cpp
halo-parallel/include/: hamiltonian.h  helper.h  initializer.h  loader.h  looper.h  recorder.h  state.h  stepper.h
halo-parallel/ipynb/: benchmark.ipynb  bipolar.ipynb  convergence.ipynb  nunubar.ipynb  reflection-coefficient-full-record.ipynb  reflection-coefficient.ipynb  slicing.ipynb  survival-probability.ipynb
halo-parallel/ipynb/.ipynb_checkpoints/: benchmark-checkpoint.ipynb  nunubar-checkpoint.ipynb  reflection-coefficient-checkpoint.ipynb  survival-probability-checkpoint.ipynb  validation-checkpoint.ipynb  various-parameters-checkpoint.ipynb
halo-parallel/scripts/: bdata.csv  convergence-full-record.py  convergence.py  damping.py  equivalence-to-antineutrin.nb  fdata.csv  fullplot-full-record.py  fullplot.py  matter-gyro-pendulum-clean.nb  parallel-test-script.sh  transpose_data.py
